--- a/about.html
+++ b/about.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Maria Solis</title>
+        <link href="main.css" rel="stylesheet">
     </head>
 
     <body>
+        <h1>Maria Solis</h1>
+
         <header>
             <nav>
                 <ul>
@@ -15,23 +18,27 @@
                 </ul>
             </nav>
         </header>
+        
+    <section></section>
+        <h2>Education Goals</h2>
+            <ul>
+                <li>Master HTML and CSS</li>
+                <li>Learn Javascript</li>
+                <li>Complete the Front End Certification this year!</li>
+            </ul>
 
-        <h1>About Me</h1>
+        <h2>Skills</h2>
+            <ul>
+                <li>Basic HTML</li>
+                <li>Type 60wpm</li>
+                <li>Very proficient in both Windows and Mac machines</li>
+            </ul>
+    </section>
 
-    <h2>Education Goals</h2>
-        <ul>
-            <li>Master HTML and CSS</li>
-            <li>Learn Javascript</li>
-            <li>Complete the Front End Certification this year!</li>
-        </ul>
-
-    <h2>Skills</h2>
-        <ul>
-            <li>Basic HTML</li>
-            <li>Type 60wpm</li>
-            <li>Very proficient in both Windows and Mac machines</li>
-        </ul>
-
+    <footer>
+        Email: <a href="mailto:msolis@example.com">msolis@example.com</a><br>
+        Last updated on 2/22/2024
+    </footer>
 
 
     </body>
