--- a/about.html
+++ b/about.html
@@ -14,12 +14,12 @@
                 <ul>
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>  
-                  <li>School</li>  
+                  <li><a href=hobbies.html>Hobbies</a></li> 
                 </ul>
             </nav>
         </header>
-        
-    <section></section>
+
+    <section id="leftColumn">
         <h2>Education Goals</h2>
             <ul>
                 <li>Master HTML and CSS</li>
@@ -27,7 +27,7 @@
                 <li>Complete the Front End Certification this year!</li>
             </ul>
 
-        <h2>Skills</h2>
+            <h2>Skills</h2>
             <ul>
                 <li>Basic HTML</li>
                 <li>Type 60wpm</li>
@@ -35,9 +35,14 @@
             </ul>
     </section>
 
+    <section id="rightColumn">
+        <img src="quote2.jpg" alt="quote2">
+    </section>
+
     <footer>
-        Email: <a href="mailto:msolis@example.com">msolis@example.com</a><br>
-        Last updated on 2/22/2024
+        Email: <a href="mailto:msolis@example.com">msolis@example.com</a>
+        <br>
+        Last updated on 03/02/2024
     </footer>
 
 
