--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
                 <ul>
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>  
-                  <li>School</li>  
+                  <li><a href=hobbies.html>Hobbies</a></li>  
                 </ul>
             </nav>
         </header>
 
+        <section id="leftColumn">
+            <h2>A little about me</h2>
             <p>My name is Maria and I am married and have 3 kids. I recently quit my job which I had been at for over 13 years. I am enjoying this phase of my life since I get to focus on my own growth and I get to be more present for my children. I enjoy travelling and exploring new places. I am very excited for this class and have heard really good things about it. </p>
-        
-        <section>
+        </section>
+
+        <section id="rightColumn">
         <h2>Hobbies</h2>
         <ul>
             <li>Reading</li>
@@ -30,12 +33,14 @@
         </ul>
         </section>
        
+        <br>
+        <br>
 
         <p>One of my favorite sites to visit is <a href="https://lbpost.com/">Long Beach Post</a> because it's the best way to get access to all the local news and I like to stay informed. </p>
 
         <footer>
             Email: <a href="mailto:msolis@example.com">msolis@example.com</a><br>
-            Last updated on 2/22/2024
+            Last updated on 03/02/2024
         </footer>
     </body>
 </html>
